[package]
name = "falcon-bms-control-server"
edition = "2024"

build = "build.rs"

[build-dependencies]
vergen-git2 = { version = "1.0.0", features = ["build", "cargo", "rustc", "si"] }
anyhow = "*"

# [lib]
# name = "falcon_key_file"
# path = "src/lib/falcon-key-file/src/lib.rs"

[dependencies]
# bms-sm = { version = "*", path = "src/lib/bms-rs" }
log = "0.4"
env_logger = "0.11"
# winapi = "*"
# user32-sys = "*"
enigo = "0.6"
seahash = "4.1.0"
levenshtein = "1.0.5"
figment = { version = "0.10", features = ["toml"]}
serde = {version = "1", features = ["derive"]}
rmp-serde = "1.3.0"
enet = "0.3.0"
uuid = { version = "1.18.1", features = ["v4"] }
turbojpeg = { version = "1.3.3", features = ["image"]}

[profile.release]
lto = true
strip = true
opt = 3
