[package]
name = "falcon-bms-control-server"
edition = "2024"

build = "build.rs"

[build-dependencies]
vergen-git2 = { version = "1.0.0", features = ["build", "cargo", "rustc", "si"] }
anyhow = "*"

[dependencies]
log = "0.4"
env_logger = "0.11"
winapi = "*"
user32-sys = "*"
seahash = "4.1.0"
levenshtein = "1.0.5"
figment = { version = "0.10", features = ["toml"]}
serde = {version = "1", features = ["derive"]}
rmp-serde = "1.3.0"
enet = { version = "0.4.0", git = "https://github.com/kungfoo/enet-rs.git" }
uuid = { version = "1.18.1", features = ["v4"] }
turbojpeg = { version = "1.3.3", features = ["image"]}
bms-sm = { git = "https://github.com/kungfoo/bms-rs.git", version = "0.2" }
falcon-key-file = { git = "https://github.com/kungfoo/falcon-bms-keyfile.git", version = "0.3.0" }
windows = { version = "0.62.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }
image = { version = "0.25.8", features = [] }

[profile.release]
lto = true
strip = true
opt-level = 3  # Optimize for speed.
